VLC error messages rework
VLC error messages display needs to be reworked. Currently, messages are displayed in separate error windows. Even some easy errors (missing file) lead to multiple stacked dialogs.
And enabling repeat mode in this scenario even kills the VLC application far worse than before.