macosx: Revive error panel for error and warning messages

VLC needs a list of errors as multiple errors can occur at the
same time.
This revives the existing error panel from
e3f2ec3e00f68f6dad9ea5ab732b7397a1b9891f.

refs #17262