modules/gui/macosx/VLCCoreDialogProvider.m
@@ -26,6 +26,8 @@
 #import "VLCCoreDialogProvider.h"
 #import "misc.h"
 
+#import "VLCErrorWindowController.h"
+
 /* for the icon in our custom error panel */
 #import <ApplicationServices/ApplicationServices.h>
 
@@ -153,6 +155,8 @@ static void updateProgressCallback(void *p_data,
         msg_Dbg(getIntf(), "Register dialog provider");
         [NSBundle loadNibNamed:@"CoreDialogs" owner: self];
 
+        _errorPanel = [[VLCErrorWindowController alloc] init];
+
         intf_thread_t *p_intf = getIntf();
         /* subscribe to various interactive dialogues */
 
@@ -194,13 +198,8 @@ static void updateProgressCallback(void *p_data,
 
 - (void)displayError:(NSArray *)dialogData
 {
-    NSAlert *alert = [NSAlert alertWithMessageText:[dialogData objectAtIndex:0]
-                                     defaultButton:_NS("OK")
-                                   alternateButton:nil
-                                       otherButton:nil
-                         informativeTextWithFormat:@"%@", [dialogData objectAtIndex:1]];
-    [alert setAlertStyle:NSCriticalAlertStyle];
-    [alert runModal];
+    [_errorPanel showWindow:nil];
+    [_errorPanel addError:[dialogData objectAtIndex:0] withMsg:[dialogData objectAtIndex:1]];
 }
 
 - (void)displayLoginDialog:(NSArray *)dialogData
